--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chainlink/contracts": "0.0.11",
+    "@openzeppelin/contracts": "^3.2.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
